<resources>
    <string name="app_name">eCommerce</string>
    <string name="action_about">About</string>
    <string name="retry">Retry</string>
    <string name="products">products</string>
    <string name="customers">customers</string>
    <string name="orders">orders</string>
</resources>
