<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="products_list" type="id" />
    <item name="customers_list" type="id" />
</resources>