<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/product_list_image"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:scaleType="centerInside"
        tools:src="@mipmap/ic_launcher"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="11dp"
        android:layout_marginStart="11dp" />

    <TextView
        android:id="@+id/product_list_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp"
        android:layout_toEndOf="@+id/product_list_image"
        android:layout_toRightOf="@+id/product_list_image"
        android:text="Title"
        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

    <TextView
        android:id="@+id/product_list_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        android:maxLines="1"
        android:paddingEnd="4dp"
        android:paddingRight="4dp"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        tools:text="Price" />

</RelativeLayout>
