<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="20dp"
    android:paddingTop="20dp">

    <TextView
        android:id="@+id/customer_list_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp"
        android:text="19"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/customer_list_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/customer_list_last_name"
        android:layout_alignBottom="@+id/customer_list_last_name"
        android:layout_marginLeft="140dp"
        android:layout_marginStart="140dp"
        android:layout_toEndOf="@+id/customer_list_id"
        android:layout_toRightOf="@+id/customer_list_id"
        android:text="First"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/customer_list_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/customer_list_id"
        android:layout_alignBottom="@+id/customer_list_id"
        android:layout_marginLeft="18dp"
        android:layout_marginStart="18dp"
        android:layout_toEndOf="@+id/customer_list_id"
        android:layout_toRightOf="@+id/customer_list_id"
        android:text="LastName"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

</RelativeLayout>
